--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class='subscribe-form'>
     <form class='subscribe-form' method='post'>
     <input name='uri' type='hidden' value='jeniusbareng'/><input name='loc' type='hidden' value='en_US'/><input autocomplete='off'
-    class='subscribe-css-email-field' name='email' placeholder='Enter your Email'/><input class='subscribe-css-email-button' title=''
+    class='subscribe-css-email-field' name='email' type="email" placeholder='Enter your Email'/><input class='subscribe-css-email-button' title=''
     type='submit' value='submit'/></form>
     <h1 class="message"></h1>
     </div>
@@ -21,7 +21,7 @@ $(function(){
                         type: "POST",
                         data: {email: $("input[name=email]").val() },
                         success: function(data){
-                                $(".message").append(data.message)
+                                $(".message").html(data.message)
                         },
                         error: function(err) {
                                 console.log(err)
